# devforge

./: $null  .gitignore  .impeccable.md  CLAUDE.md  README.md  ai-chat-module-redesign-v2.html  ai-chat-module-redesign.html  ai-runtime-panel-implementation-plan.md  ai-runtime-panel-layout-options.html  design_optimization_plan.md  dev.bat  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  update.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
.doc/: P1-01-ai-sql-editor.md  P1-02-er-diagram-query-result.md  P1-03-completion-report.md  P1-03-ux-optimization.md  P1-04-tech-debt-cleanup.md  code-analysis-report.md  complete-implementation-summary.md  database-module-refactor.md  issue-tracker.md  marquee-selection-plan.md  phase1-implementation-summary.md  phase1-phase2-implementation-summary.md  phase3-implementation-summary.md  polymorphic-roaming-wren.md  prompt-optimizer-integration-plan-v1.md  prompt-optimizer-integration-plan-v2.md  prompt-optimizer-integration-plan-v3.md  prompt-optimizer-integration-plan.md  purring-moseying-lecun.md  quick-start-guide.md  scalable-wandering-thacker.md  sort-typeahead-plan.md  typescript-warnings-cleanup.md  valiant-singing-cherny.md
.docs/: batch-transfer-queue-implementation.md
.github/workflows/: ci.yml  release.yml
docs/: ai-agent-advanced-capabilities-plan.md  ai-agent-architecture-upgrade-plan.md  ai-agent-engineering-governance-implementation-status.md  ai-agent-engineering-governance-plan.md  ai-agent-productization-upgrade-plan.md  ai-architecture-maturity-comparison.md  ai-chat-stress-regression-checklist.md  ai-config-switching-plan.md  ai-desktop-gui-experience-implementation-status.md  ai-desktop-gui-experience-plan.md  ai-handoff-2026-04-20.md  ai-handoff-2026-04-21-dispatcher-v1.md  ai-module-assessment-report.md  ai-provider-gateway-governance-plan.md  ai-stage-current-progress-and-next-actions.md  ai-upgrade-task-sequence.md  code-audit-2026-04-23-frontend-backend.md  code-review-report.md  progress-2026-04-22-dispatcher-ai-workspace.md  progress-2026-04-22-workspace-database-handoff.md  project-improvement-plan.md
docs/design/: ai-repository-centric-prototype.html
scripts/: generate-icons.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  check_output.txt  final_check.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  app_state.rs  audit_log.rs  background_job.rs  command_snippet.rs  connection.rs  data_sync.rs  db.rs  db_backup.rs  diagnostics.rs  feature_gate.rs  file_editor.rs  git.rs  import.rs  import_export.rs  local_shell.rs  mod.rs  query_history.rs  redis.rs  scheduler.rs  schema_compare.rs  screenshot.rs  sftp.rs  sql_snippet.rs  ssh.rs  sync.rs  system_monitor.rs  table_editor.rs  terminal_recorder.rs  transfer.rs  tunnel.rs  updater.rs  workspace_fs.rs  workspace_isolation.rs
src-tauri/src/commands/db/: admin.rs  metadata.rs  mod.rs  query.rs  tools.rs
src-tauri/src/models/: ai.rs  connection.rs  git.rs  import_export.rs  mod.rs  query.rs  redis.rs  scheduler.rs  screenshot.rs  ssh.rs  table_editor.rs  transfer.rs  workspace_fs.rs
src-tauri/src/services/: audit_log.rs  background_job.rs  crash_reporter.rs  credential.rs  cron_parser.rs  data_import.rs  data_sync.rs  db_backup.rs  db_engine.rs  file_chunker.rs  file_watcher.rs  git_engine.rs  import_export.rs  known_hosts.rs  local_shell_engine.rs  mod.rs  progress_tracker.rs  redis_engine.rs  redis_monitor.rs  redis_pubsub.rs  scheduler.rs  schema_compare.rs  screenshot_engine.rs  sftp_engine.rs  sftp_handler.rs  sql_splitter.rs  ssh_auth.rs  ssh_engine.rs  ssh_tunnel.rs  storage.rs  table_editor.rs  terminal_recorder.rs  transfer_manager.rs
src-tauri/src/services/ai/: ai_tools.rs  anthropic.rs  exec_bash.rs  exec_web.rs  http_retry.rs  memory_models.rs  memory_store.rs  mod.rs  models.rs  openai_compat.rs  openai_dialect.rs  provider.rs  session_store.rs  stream_parser.rs  tool_result_budget.rs  tool_result_store.rs  write_snapshot.rs
src-tauri/src/services/db_drivers/: mod.rs  mysql.rs  postgres.rs
src-tauri/src/services/db_drivers/mysql/: connection.rs  executor.rs  mod.rs  util.rs
src-tauri/src/services/db_engine/: executor.rs  export.rs  import.rs  index_advisor.rs  meta.rs  mod.rs  performance.rs  tx.rs
src-tauri/src/utils/: boot_config.rs  error.rs  mod.rs
src/__tests__/: app-startup.test.ts  helpers.ts  setup.ts
src/ai-gateway/: AiGateway.ts  fallbackKeys.ts  gatewayDashboard.ts  gatewayPolicy.ts  gatewayPolicyAudit.ts  override.ts  rateLimiter.ts  router.ts  security.ts  tokenEstimator.ts  types.ts  (+1 more)
(+733 files in other folders)
