[package]
name = "devforge"
version = "0.1.0"
description = "Unified developer tool: Database + SSH + SFTP"
authors = ["DevForge Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "devforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database (SQLite for local storage, MySQL/PostgreSQL for user connections)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "postgres", "tls-rustls"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Credential management (Windows Credential Manager)
keyring = { version = "3", features = ["windows-native"] }

# Error handling
thiserror = "2"
anyhow = "1"

# App data directory
directories = "6"

# Logging
log = "0.4"

# Regex for identifier validation
regex = "1"

# Ordered map for table editor
linked-hash-map = "0.5"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# CSV parsing for data import
csv = "1.3"

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# SSH client
russh = "0.48"
async-trait = "0.1"
ssh-key = "0.6"

# SFTP
russh-sftp = "2.1"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[dev-dependencies]
tempfile = "3"

