[package]
name = "devforge"
version = "0.8.0"
description = "Unified developer tool: Database + SSH + SFTP"
authors = ["DevForge Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "devforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs", "time", "sync", "process", "net"] }
tokio-util = "0.7"

# Database (SQLite for local storage, MySQL/PostgreSQL for user connections)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "postgres", "tls-rustls", "chrono", "rust_decimal"] }
rust_decimal = "1"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Credential management (Windows Credential Manager)
keyring = { version = "3", features = ["windows-native"] }

# Error handling
thiserror = "2"
anyhow = "1"

# App data directory
directories = "6"

# Windows-friendly path canonicalization
dunce = "1"

# Logging
log = "0.4"

# Regex for identifier validation
regex = "1"

# Async utilities
futures = "0.3"

# Ordered map for table editor
linked-hash-map = "0.5"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# CSV parsing for data import
csv = "1.3"

# Hex encoding for binary data in SQL backup
hex = "0.4"

# Excel 导出（.xlsx 格式）
rust_xlsxwriter = "0.79"

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# SSH client
russh = "0.48"
async-trait = "0.1"
ssh-key = "0.6"

# SFTP
russh-sftp = "2.1"
urlencoding = "2.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
base64 = "0.22.1"
tauri-plugin-opener = "2"

# Local terminal PTY (ConPTY on Windows)
portable-pty = "0.8"

# 文件夹打包传输（tar.gz）
flate2 = "1"
tar = "0.4"
walkdir = "2"

# Shell 参数转义（防命令注入）
shell-escape = "0.1"

# Redis 客户端
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager", "cluster-async"] }

# Git 操作（libgit2 绑定）
git2 = { version = "0.19", features = ["vendored-libgit2"] }

# 截图（屏幕/窗口/区域截取）
xcap = "0.5"
image = { version = "0.25", features = ["png"] }
arboard = { version = "3", features = ["image-data"] }

# SHA-256 校验（更新包完整性）
sha2 = "0.10"

# 系统监控（CPU/内存/磁盘/进程）
sysinfo = "0.32"

# 文件监听（去抖 + rename 配对）
notify-debouncer-full = "0.4"

# 删除到回收站
trash = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
debug = 0          # 不生成调试符号（省最多空间，但不能用 debugger 断点调试）
incremental = true # 保留增量编译（编译快）

